--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@deemlol/next-icons": "^0.1.9",
     "@radix-ui/react-select": "^2.2.6",
     "@tabler/icons-react": "^3.34.1",
     "@tsparticles/engine": "^3.9.1",
