--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-select": "^2.2.6",
     "@tabler/icons-react": "^3.34.1",
     "@tsparticles/engine": "^3.9.1",
@@ -19,12 +20,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
-    "next": "15.5.0",
+    "next": "^15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
