--- a/src/data/ProjectsData.json
+++ b/src/data/ProjectsData.json
@@ -4,13 +4,13 @@
       "name": "Portfolio Website",
       "description": "Personal portfolio built with Next.js and TailwindCSS.",
       "liveLink": "https://yourportfolio.com",
-      "photo": "/images/project1.jpg"
+      "photo": "/file.svg"
     },
     {
       "name": "E-commerce Store",
       "description": "Full-stack e-commerce store with Stripe payments and Next.js backend.",
       "liveLink": "https://ecommerce.com",
-      "photo": "/images/project2.jpg"
+      "photo": "/file.svg"
     }
   ]
 }
