fixed projects content

--- a/src/data/ProjectsData.json
+++ b/src/data/ProjectsData.json
@@ -1,15 +1,39 @@
 {
   "Projects": [
     {
+      "name": "Dubizzle",
+      "description": "One of the largest online classified platforms in the Middle East, enabling users to buy, sell, and find services across a wide range of categories.",
+      "liveLink": "https://dubai.dubizzle.com/",
+      "photo": "/file.svg"
+    },
+    {
       "name": "Portfolio Website",
-      "description": "Personal portfolio built with Next.js and TailwindCSS.",
+      "description": "A personal portfolio built with Next.js and TailwindCSS, showcasing projects, skills, and professional experience in a clean, responsive design.",
       "liveLink": "https://yourportfolio.com",
       "photo": "/file.svg"
     },
     {
-      "name": "E-commerce Store",
-      "description": "Full-stack e-commerce store with Stripe payments and Next.js backend.",
-      "liveLink": "https://ecommerce.com",
+      "name": "Bayut",
+      "description": "The UAE’s leading real estate marketplace, similar to Zillow, offering property listings, advanced search, and rental/sales solutions.",
+      "liveLink": "https://www.bayut.com/",
+      "photo": "/file.svg"
+    },
+    {
+      "name": "OLX Pakistan",
+      "description": "A peer-to-peer online marketplace for buying and selling products, vehicles, property, and more, trusted by millions of users nationwide.",
+      "liveLink": "https://www.olx.com.pk/",
+      "photo": "/file.svg"
+    },
+    {
+      "name": "12th Analytics",
+      "description": "A data analytics platform designed for businesses to gain actionable insights through interactive dashboards and reporting tools.",
+      "liveLink": "https://www.12thanalytics.com/",
+      "photo": "/file.svg"
+    },
+    {
+      "name": "AARHTI (Final Year Project)",
+      "description": "A digital agriculture platform for trading crops and analyzing yields, with predictive insights powered by aerial imagery and analytics.",
+      "liveLink": "#",
       "photo": "/file.svg"
     }
   ]
