fixing project cards

--- a/src/data/ProjectsData.json
+++ b/src/data/ProjectsData.json
@@ -26,7 +26,7 @@
       "photo": "/12Analytics.png"
     },
     {
-      "name": "AARHTI (Final Year Project)",
+      "name": "AARHTI",
       "description": "A digital agriculture platform for trading crops and analyzing yields, with predictive insights powered by aerial imagery and analytics.",
       "liveLink": "#",
       "photo": "/Aarhti.png"
