--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
+  },
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
