adding contact api

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "^15.5.3",
